--- a/index.ipynb
+++ b/index.ipynb
@@ -184,21 +184,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-10-22 22:33:06,185 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
-      "2018-10-22 22:33:06,187 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2018-10-22 22:33:06,188 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
-      "2018-10-22 22:33:06,189 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2018-10-22 22:33:06,190 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"musicians\")\n",
-      "2018-10-22 22:33:06,190 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2018-10-22 22:33:06,192 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"instruments\")\n",
-      "2018-10-22 22:33:06,192 INFO sqlalchemy.engine.base.Engine ()\n"
+      "2019-04-02 16:17:52,476 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2019-04-02 16:17:52,482 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-04-02 16:17:52,483 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2019-04-02 16:17:52,484 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-04-02 16:17:52,485 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"musicians\")\n",
+      "2019-04-02 16:17:52,486 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-04-02 16:17:52,487 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"instruments\")\n",
+      "2019-04-02 16:17:52,487 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-04-02 16:17:52,488 INFO sqlalchemy.engine.base.Engine \n",
+      "CREATE TABLE instruments (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tname VARCHAR, \n",
+      "\tinstrument_type VARCHAR, \n",
+      "\tPRIMARY KEY (id)\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2019-04-02 16:17:52,489 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-04-02 16:17:52,494 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2019-04-02 16:17:52,495 INFO sqlalchemy.engine.base.Engine \n",
+      "CREATE TABLE musicians (\n",
+      "\tid INTEGER NOT NULL, \n",
+      "\tfullname VARCHAR, \n",
+      "\tinstrument INTEGER, \n",
+      "\tdob DATETIME, \n",
+      "\talive BOOLEAN, \n",
+      "\tPRIMARY KEY (id), \n",
+      "\tFOREIGN KEY(instrument) REFERENCES instruments (id), \n",
+      "\tCHECK (alive IN (0, 1))\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2019-04-02 16:17:52,496 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2019-04-02 16:17:52,502 INFO sqlalchemy.engine.base.Engine COMMIT\n"
      ]
     }
    ],
@@ -247,9 +273,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -261,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
